Add force mode to restart feature: