@@ -7,16 +7,24 @@ import nl.hauntedmc.serverfeatures.features.restart.internal.RestartService;
 import org.bukkit.command.CommandSender;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public class RestartCommand extends FeatureCommand {
+
+    // Base and force permissions
+    private static final String PERM = "serverfeatures.feature.restart.command.restart";
+    private static final String PERM_FORCE = "serverfeatures.feature.restart.command.restart.force";
 
     private final Restart feature;
     private final RestartService service;
 
     public RestartCommand(Restart feature, RestartService service) {
-        super(new CommandSpec.Builder("restart").build());
+        super(new CommandSpec.Builder("restart")
+                .description("Restart the server with a countdown, or immediately with 'force'.")
+                .usage("/restart [force]")
+                .aliases(List.of("reboot"))
+                .permission(PERM)
+                .build());
         this.feature = feature;
         this.service = service;
     }
@@ -24,9 +32,29 @@ public class RestartCommand extends FeatureCommand {
     @Override
     public boolean execute(@NotNull CommandSender sender,
                            @NotNull String label,
-                           @NotNull String[] args) {
+                           @NotNull String @NotNull [] args) {
 
-        if (!sender.hasPermission("serverfeatures.feature.restart.command.restart")) {
+        // Handle forced restart: skip sequencing, save-all and shutdown immediately
+        if (args.length >= 1 && args[0].equalsIgnoreCase("force")) {
+            if (!(sender.hasPermission(PERM_FORCE) || sender.hasPermission(PERM))) {
+                sender.sendMessage(feature.getLocalizationHandler()
+                        .getMessage("general.no_permission")
+                        .forAudience(sender)
+                        .build());
+                return true;
+            }
+            sender.sendMessage(feature.getLocalizationHandler()
+                    .getMessage("restart.forced")
+                    .forAudience(sender)
+                    .build());
+
+            service.forceImmediate(sender);
+
+            return true;
+        }
+
+        // Normal countdown-based restart
+        if (!sender.hasPermission(PERM)) {
             sender.sendMessage(feature.getLocalizationHandler()
                     .getMessage("general.no_permission")
                     .forAudience(sender)
@@ -53,6 +81,11 @@ public class RestartCommand extends FeatureCommand {
     public @NotNull List<String> tabComplete(@NotNull CommandSender sender,
                                              @NotNull String alias,
                                              @NotNull String[] args) {
-        return Collections.emptyList();
+        if (args.length == 1) {
+            String p = args[0].toLowerCase();
+            boolean canForce = sender.hasPermission(PERM_FORCE) || sender.hasPermission(PERM);
+            if (canForce && "force".startsWith(p)) return List.of("force");
+        }
+        return List.of();
     }
 }
